--- a/.github/workflows/pull_translations.yml
+++ b/.github/workflows/pull_translations.yml
@@ -16,11 +16,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Pull Translations from Transifex
+      - name: Instalar Cliente de Transifex
         run: |
-          bash .github/scripts/transifex.sh pull
-        env:
-          TX_TOKEN: ${{ secrets.TX_TOKEN }}
+          curl -o- https://raw.githubusercontent.com/transifex/cli/master/install.sh | bash
+
+      - name: Configurar Acceso a Transifex
+        run: |
+          echo "[https://www.transifex.com]" > ${{ github.workspace }}/.transifexrc
+          echo "token = ${{ secrets.TX_TOKEN }}" >> ${{ github.workspace }}/.transifexrc
+          cat .transifexrc
+          cat .tx/config
+
+
+      - name: Descargar Traducciones Españolas
+        run: |
+          tx pull -l es  # Asume que 'es' es el código de idioma para español
 
       - name: Commit and push changes
         id: auto-commit-action
