--- a/.github/workflows/pull_translations.yml
+++ b/.github/workflows/pull_translations.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          token: ${{ secrets.MY_PAT }} # Utiliza PAT en lugar del GITHUB_TOKEN predeterminado
+          token: ${{ secrets.PAT }} # Utiliza PAT en lugar del GITHUB_TOKEN predeterminado
 
       - name: Pull Translations from Transifex
         run: |
