--- a/.github/workflows/build_upload_translate.yml
+++ b/.github/workflows/build_upload_translate.yml
@@ -47,12 +47,8 @@ jobs:
           file: package/docker/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: bahmni/default-config:${{env.ARTIFACT_VERSION}},bahmni/default-config:latest
-      - name: Push Translations to Transifex
-        run: |
-          bash .github/scripts/transifex.sh push
-        env:
-          TX_TOKEN: ${{ secrets.TX_TOKEN }}
+          tags: juanjortega/default-config-cmdf:${{env.ARTIFACT_VERSION}},juanjortega/default-config-cmdf:latest
+
       - name: Update Version and Image Tag
         run: |
           yq --inplace '.image.tag = "${{ env.ARTIFACT_VERSION }}"' $HELM_CHART_PATH/values.yaml
